<resources>
    <string name="app_name">TaExisito! Panel</string>
    <string name="nombre_del_producto">Nombre del Producto *</string>
    <string name="descripci_n_del_producto">Descripción del Producto *</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_tel_fono">No. Telefono *</string>
    <string name="tipo_de_producto">TIPO DE PRODUCTO*</string>
    <string name="campos_obligatorios">(Los campos * son obligatorios)</string>
    <string name="precio">Precio*</string>
    <string name="moneda">Q.</string>
    <string name="tipo_comida">Tipo:</string>
    <string name="edit">EDITAR</string>
    <string name="telefono">Telefono:</string>
</resources>